# poc-digital-twin

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
doc/: INSTRUKCJA_PL.md
doc/idea/: description.txt
scripts/: __init__.py  analyze_metadata.py  check_index.py  detect_gpu.py  ingest.py  run_ui.py
src/: __init__.py  config.py
src/graph/: __init__.py  contact_graph.py
src/indexer/: __init__.py  vector_store.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gpt4all_provider.py  openai_provider.py
src/loaders/: __init__.py  ads_interests_loader.py  base.py  contacts_loader.py  email_loader.py  location_loader.py  messenger_loader.py  profile_loader.py  search_history_loader.py  text_loader.py  whatsapp_loader.py
src/rag/: __init__.py  citations.py  explainability.py  forget.py  priority.py  query_engine.py  query_preprocessor.py
src/storage/: __init__.py  audit.py  chat_history.py  contact_registry.py  document_registry.py
src/ui/: __init__.py  app.py
wiki/: API-Reference.md  FAQ.md  FR-P0-1-Grounded-Answers.md  FR-P0-2-Offline-Mode.md  FR-P0-3-Priority-Rules.md  FR-P0-4-Explainability.md  FR-P0-5-Forget-RTBF.md  Home.md  Import-danych-Facebook.md  Instalacja.md  Integracje.md  Konfiguracja.md  Pipelines.md  Podstawy-użytkowania.md  Scenariusze-użycia.md  _Sidebar.md
